# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)


  21 Jul 2002; Martin Schlemmer <azarah@gentoo.org>:

    Fix LVM support in /etc/init.d/checkfs again, thanks to help from
    Kyle Manna <nitro@gentoo.org>.

    Add software RAID support to /etc/init.d/checkfs, thanks to
    Daniel Ahlberg <aliz@gentoo.org>.

* rc-scripts 1.3.6 (17 Jul 2002)

  17 Jul 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add logging functionality to the rc-scripts, thanks to Alexander Holler,
    bug #4037 for the basic idea.  Updated /sbin/functions.sh for this.

  16 Jul 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add additional entries to /etc/services to support cyrus-imapd, thanks
    to Nick Hadaway <raker@gentoo.org>.

    Update /etc/init.d/consolefont to resolve bug #4968.  This fixes a
    problem with non 7bit ascii symbols.

    Updated /etc/init.d/checkfs to detect if lvm is already active.
    This should resolve bug #3613.

  5 Jun 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add "usb" group, gid 85.  Move "sshd" user and group to 22.  Move
    "games" user and group to 35

  3 Jun 2002; Martin Schlemmer <azarah@gentoo.org>:

    Update Copyright displayed at boot, thanks to Sascha Schwabbauer
    (aka cybersystem).  Updated /sbin/rc for this.

  30 Jun 2002; Martin Schlemmer <azarah@gentoo.org>:

    Update /etc/skel/.bashrc to update the window title of X terminals
    that supports it.  Closes bug #4232.

  26 Jun 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add sshd user and group.  Updated /etc/passwd and /etc/group for this.

    Update /etc/inputrc to resolve bug #2599.

  20 Jun 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add /opt/bin to $PATH and $ROOTPATH, closing bug #3603.  Modified
    /etc/env.d/00basic for this.

    Add some new daemon stop and pid detection stuff to /sbin/functions.sh.
    Nothing official, but I spent enouth time on it not to want to loose it :)
