@@ -136,6 +136,8 @@ cache_depend() {
 
 	local myline=""
 	local dowrite=1
+	local bcount=0
+	local ecount=0
 	(cat ${1}) | { while read myline
 		do
 			if [ "${myline/depend*()/}" != "${myline}" ]
@@ -144,9 +146,20 @@ cache_depend() {
 			fi
 			if [ "${dowrite}" -eq 0 ]
 			then
+				local mycount="$(echo ${myline} | grep --mmap -oe "{" | wc -l)"
+				bcount=$((bcount + mycount))
+			fi
+			if [ "${dowrite}" -eq 0 ]
+			then
 				echo "${myline}" >> ${svcdir}/cache/${1##*/}.depend
 			fi
-			if [ "${myline/\}/}" != "${myline}" ] && [ "${dowrite}" -eq 0 ]
+			if [ "${dowrite}" -eq 0 ]
+			then
+				local mycount="$(echo ${myline} | grep --mmap -oe "}" | wc -l)"
+				ecount=$((ecount + mycount))
+			fi
+			if [ "${myline/\}/}" != "${myline}" ] && \
+			   [ "${dowrite}" -eq 0 ] && [ "${bcount}" -eq "${ecount}" ]
 			then
 				dowrite=1
 				break
